Boxing OK here
git-svn-id: https://svn.apache.org/repos/asf/commons/proper/math/trunk@1504723 13f79535-47bb-0310-9956-ffa450edef68